fixed layout issues

--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -2,7 +2,7 @@
   padding: 24px;
   height: 100vh;
 
-  display: grid;
+  /* display: grid; */
   grid-template-rows: auto 1fr auto;
 
   max-width: 1100px;
